# external-auth-traefik

./: .env  .gitignore  README.md  docker-compose.yml  keycloak-compose.yaml  setup-keycloak.sh  start-up.sh  traefik-compose.yaml
.github/workflows/: display-food.yml  docker-multi-build.yml  nginx.yml  posts.yml  todos.yml
display-post-service/: Cargo.toml  dockerfile
display-post-service/src/: main.rs
display-post-service/templates/: posts.html
display-todos-service/: Cargo.toml  dockerfile
display-todos-service/src/: main.rs
display-todos-service/templates/: todos.html
food-post-service/: Cargo.toml  dockerfile
food-post-service/src/: main.rs
food-post-service/templates/: food.html
nginx-homepage/public/: index.html
nginx-homepage/public/css/: style.css
nginx-homepage/public/js/: script.js
traefik-config/: middlewares.yml
